--- a/Views/Shared/FooterPartial.cshtml
+++ b/Views/Shared/FooterPartial.cshtml
@@ -33,9 +33,9 @@
             </div>
             <div class="col-lg-3 col-sm-6">
                 <h1 class="customer_text">Место для чего нибудь</h1>
-                <p class="footer_lorem_text">
+                <a class="footer_lorem_text" href="@Url.Action("ResourseUsed", "Home")">
                     Нужно подумать что можно здесь разместить
-                </p>
+                </a>
             </div>
         </div>
         <div class="input-group mb-3">
