--- a/Views/Shared/ScriptsPartial.cshtml
+++ b/Views/Shared/ScriptsPartial.cshtml
@@ -1,17 +1,25 @@
 ﻿
 <!-- Javascript files-->
-@*@<script src="~/js/jquery.min.js"></script>
+@*<script src="~/js/jquery.min.js"></script>
 <script src="~/js/popper.min.js"></script>
 <script src="~/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/jquery-3.0.0.min.js"></script>
 <script src="~/js/plugin.js"></script>*@
 
+<!-- bundle -->
 <script src="~/js/scripts.bundle.min.js" asp-append-version="true"></script>
-<script src="~/js/entryFormScript.js" asp-append-version="true"></script>
-
+<!-- validations-js -->
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.10/jquery.validate.unobtrusive.min.js"></script>
 <!-- sidebar -->
 <script src="~/js/jquery.mCustomScrollbar.concat.min.js" asp-append-version="true"></script>
 <script src="~/js/custom.js" asp-append-version="true"></script>
 <!-- javascript -->
-<script src="~/js/owl.carousel.js" asp-append-version="true"></script>
-<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+@*<script src="~/js/owl.carousel.js" asp-append-version="true"></script>
+<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>*@
+<!-- non-template-js -->
+<script src="~/js/entryFormScript.js" asp-append-version="true"></script>
+@*<script src="~/js/confirmScript.js" asp-append-version="true"></script>*@
+<script src="~/js/PhoneCallerRefScript.js" asp-append-version="true"></script>
+<script src="~/js/phoneMaskScript.js" asp-append-version="true"></script>
+<script src="~/js/showBtnScript.js" asp-append-version="true"></script>
