--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
 </head>
 <body>
     @await Html.PartialAsync("EntryFormPartial")
+    @await Html.PartialAsync("ConfirmPartial")
     @RenderBody()
 </body>
     
