--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
-@model VartanMVCv2.Views._ViewStartModel
+@using VartanMVCv2.ViewModels
+@*@model VartanMVCv2.Views._ViewStartModel*@
+@model IndexViewModel
 @{
     Layout = "_Layout";
 }
