--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,20 +1,5 @@
 ﻿@await Html.PartialAsync("HeaderWithoutSliderPartial")
-<!-- about section start -->
-<div class="about_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h1 class="about_text">About Us</h1>
-                <p class="lorem_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believableThere are many variations of passages of Lorem Ipsum available, but the majority have able</p>
-                <div class="read_bt1"><a href="#">Read More</a></div>
-            </div>
-            <div class="col-md-6">
-                <div class="image_1"><img src="images/img-1.png"></div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- about section end -->
+@await Html.PartialAsync("~/Views/Shared/Section/AboutSectionPartial.cshtml")
 @await Html.PartialAsync("FooterPartial")
 <!-- copyright section start -->
 <div class="copyright_section" />
