--- a/Views/Shared/EntryFormPartial.cshtml
+++ b/Views/Shared/EntryFormPartial.cshtml
@@ -1,24 +1,40 @@
-﻿
+﻿@using VartanMVCv2.ViewModels
+@model IndexViewModel
+
 <div class="pop_up" id="pop_up">
     <div class="pop_up_container">
         <div class="pop_up_body">
             <div class="grid_form_container">
                 <div class="grid_item">
-                    <p>Оставьте заявку и мы вам перезвоним.</p>
-                    <form action="">
-                        <input class="text_input_form" type="text" value="" placeholder="Имя" />
-                        <input class="text_input_form" type="text" value="" placeholder="Телефон" />
-                        <input class="text_input_form" type="text" value="" placeholder="Email" />
+                    <div id="p_div_conteiner">
+                        <p id="p_textForm">Оставьте заявку на бесплатную консультацию, и мы перезвоним вам в удобное для вас время.</p>
+                    </div>
+                    
+                    <form asp-controller="home" asp-action="index" method="post">
+                        <p2 class="validation_text">
+                            <input class="text_input_form"  placeholder="Имя" asp-for="@Model.ClientExample.Name" data-val-required="Это поле не долно быть пустым" />
+                            <span asp-validation-for="@Model.ClientExample.Name" />
+                        </p2>
+                        <p2 class ="validation_text">
+                            <input class="text_input_form" type="tel" data-tel-input maxlength="18" placeholder="Телефон" asp-for="@Model.ClientExample.Phone" data-val-required="Это поле не долно быть пустым" />
+                            <span asp-validation-for="@Model.ClientExample.Phone" />
+                        </p2>
+                        <p2 class="validation_text">
+                            <input class="text_input_form" type="email" placeholder="Email" asp-for="@Model.ClientExample.Email" data-val-email="Некорректный Email адрес" />
+                            <span asp-validation-for="@Model.ClientExample.Email" />
+                        </p2>
                         <div class="time_selection">
                             <label for="time" class="lab_chk_time">Позвонить с: </label>
-                            <input type="time" id="time" name="time" />
+                            <input type="datetime-local" id="time" asp-for="@Model.ClientExample.CallTime" />
                         </div>
-                        <button>Создать заявку</button>
+                        <button name="acceptBtn" id="accept" type="submit" value="Send">Создать заявку</button>
+                        <label class="lab_chk_time"> Создавая заявку, вы даёте согласие на обработку персональных данных. </label>
                     </form>
+
                     <div class="pop_up_close" id="pop_up_close">&#10006</div>
                 </div>
                 <div class="grid_item_1" >
-                    <div class="image_person"><img src="~/images/form_person.png"></div>
+                    <div class="image_person"><img src="~/images/form_person1.png"></div>
                 </div>
             </div>
             
