--- a/Views/Shared/HeaderWithoutSliderPartial.cshtml
+++ b/Views/Shared/HeaderWithoutSliderPartial.cshtml
@@ -2,7 +2,7 @@
 <div class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="logo"><a href="index.html"><img src="~/images/logo.png"></a></div>
+            <div class="logo"><a href="@Url.Action("Index", "Home")"><img src="/images/logo.png"></a></div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,14 +27,14 @@
                 <form class="form-inline my-2 my-lg-0">
                     <div class="search_icon">
                         <ul>
-                            <li><a href="#"><img src="/images/search-icon.png"></a></li>
-                            <li><a href="#">+7 988 878 88 77</a></li>
-                            <li><a href="#">+7 499 000 00 77</a></li>
+                            <li><a><&#9742></a></li>
+                            <li><a id="ref_phone" href="#">+7 988 878 88 77</a></li>
+                            <li><a id="ref_phone" href="#">+7 499 000 00 77</a></li>
                         </ul>
                     </div>
                     <div class="search_icon">
                         <ul>
-                            <li><a href="#">Заказать звонок</a></li>
+                            <li><a href="#" class="btn_show_entryForm" id="btn_show_entryForm">Заказать звонок</a></li>
                         </ul>
                     </div>
                 </form>
