--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,4 +1,22 @@
 ﻿@await Html.PartialAsync("HeaderWithoutSliderPartial")
+
+<!-- about section start -->
+<div class="about_section_2 layout_padding" >
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="image_1"><img src="images/img1.png"></div>
+            </div>
+            <div class="col-md-6">
+                <h1 class="about_text">О компании</h1>
+                <p class="lorem_text">Компания «RENOVO» – строительная компания с большим опытом в ремонтных работах, гарантия качества и профессионализм штата сотрудников. Дизайнеры интерьера помогут переосмыслить зонирование вашей квартиры и создать еще более комфортные условия для жизни, а строители реализуют их смелые идеи точно так, как задумано.</p>
+                <div class="read_bt1"><a href="@Url.Action("About","Home")">Подробнее</a> </div>              
+            </div>
+        </div>
+    </div>
+</div>
+<!-- about section end -->
+
 @await Html.PartialAsync("~/Views/Shared/Section/AboutSectionPartial.cshtml")
 @await Html.PartialAsync("FooterPartial")
 <!-- copyright section start -->
