--- a/Views/Shared/Section/FeedbackSectionPartial.cshtml
+++ b/Views/Shared/Section/FeedbackSectionPartial.cshtml
@@ -20,23 +20,19 @@
                                         <div class="row">
                                             @{
                                                 int j = 0;
-                                                while (j < 3)
+                                                while (j < 3 && i < IndexViewModel.projectCounter)
                                                 {
-                                                    if (!(IndexViewModel.completedProjectsList.ToList()[i] == null))
-                                                    {
-                                                       <div class="col-sm-4">
+                                                    <div class="col-sm-4">
                                                         <div class="container_main1">
                                                             <img src="@IndexViewModel.completedProjectsList.ToList()[i].TitleImagePath" alt="Avatar" class="image" style="width:100%">
                                                             <h1 class="modern_text">@IndexViewModel.completedProjectsList.ToList()[i].Title</h1>
                                                             <div class="middle">
-                                                                <div class="text" href="#">VIEW MORE</div>
+                                                                <a class="text" href="@Url.Action("FeedbackPhoto", "Home", new{IndexViewModel.completedProjectsList.ToList()[i].ID})">VIEW MORE</a>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     j++;
-                                                    i++; 
-                                                    }
-                                                    
+                                                    i++;
                                                 }
                                             }
                                         </div>
@@ -52,22 +48,19 @@
                                         <div class="row">
                                             @{
                                                 int j = 0;
-                                                while (j < 3)
+                                                while (j < 3 && i < IndexViewModel.projectCounter)
                                                 {
-                                                    if (!(IndexViewModel.completedProjectsList.ToList()[i] == null)) 
-                                                    { 
-                                                        <div class="col-sm-4">
+                                                    <div class="col-sm-4">
                                                         <div class="container_main1">
                                                             <img src="@IndexViewModel.completedProjectsList.ToList()[i].TitleImagePath" alt="Avatar" class="image" style="width:100%">
                                                             <h1 class="modern_text">@IndexViewModel.completedProjectsList.ToList()[i].Title</h1>
                                                             <div class="middle">
-                                                                <div class="text" href="#">VIEW MORE</div>
+                                                                <a class="text" href="@Url.Action("FeedbackPhoto", "Home", new{IndexViewModel.completedProjectsList.ToList()[i].ID})">VIEW MORE</a>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     j++;
                                                     i++;
-                                                    }                                                 
                                                 }
                                             }
                                         </div>
@@ -94,131 +87,61 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                @{
+                    int indicatorsCount = (IndexViewModel.parityCounter / 2) - 1;
+                    int c = 0;
+                    while (c < indicatorsCount)
+                    {
+                       <li data-target="#carouselExampleIndicators" data-slide-to="@c + 1"></li> 
+                       c++;
+                    }
+                }
+                @*
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>*@
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <h1 class="client_text">Что говорят о нас, наши клиенты</h1>
-                    <p class="ipsum_text">Отзывы о нашей работе</p>
-                    <div class="clients_section2 layout_padding">
-                        <div class="client_1">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-7.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">Валера</h1>
-                                    <p class="dolor_ipsum_text">Все очень хорошо я прям кайфую</p>
-                                </div>
+                @{
+                    string carouselItemAction = "";                   
+                    int a = 0;
+                    while (a < IndexViewModel.parityCounter)
+                    {
+                        if (a == 0)
+                        {
+                            carouselItemAction = "carousel-item active";
+                        }
+                        else { carouselItemAction = "carousel-item"; }
+                        <div class="@carouselItemAction">
+                            <h1 class="client_text">Что говорят о нас, наши клиенты</h1>
+                            <p class="ipsum_text">Отзывы о нашей работе</p>
+                            <div class="clients_section2 layout_padding">
+                                @{
+                                    string clientClassPosition = "";
+                                    int k = 0;
+                                    while (k < 2 && a < IndexViewModel.parityCounter)
+                                    {
+                                        @if ((IndexViewModel.feedbacksList.ToList()[a].ID % 2) == 0) { clientClassPosition = "client_2"; }
+                                        else { clientClassPosition = "client_1"; }
+
+                                        <div class="@clientClassPosition">
+                                            <div class="row">
+                                                <div class="col-sm-3">
+                                                    <div class="image_7"><img src="@IndexViewModel.feedbacksList.ToList()[a].TitleImagePath"></div>
+                                                </div>
+                                                <div class="col-sm-9">
+                                                    <h1 class="loksans_text">@IndexViewModel.feedbacksList.ToList()[a].FeedbackClientName</h1>
+                                                    <p class="dolor_ipsum_text">@IndexViewModel.feedbacksList.ToList()[a].FeedbackText</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        a++;
+                                        k++;
+                                    }
+                                }
                             </div>
                         </div>
-                        <div class="client_2">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-8.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">loksans</h1>
-                                    <p class="dolor_ipsum_text">ipsum dolor sit amet, consectetur adipiscing elit, sed  veniam, quis nostrud exercitation ullamco laboris nisi ut reprehenderit in voluptate velit</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <h1 class="client_text">what is says our clients</h1>
-                    <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                    <div class="clients_section2 layout_padding">
-                        <div class="client_1">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-7.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">loksans</h1>
-                                    <p class="dolor_ipsum_text">ipsum dolor sit amet, consectetur adipiscing elit, sed  veniam, quis nostrud exercitation ullamco laboris nisi ut reprehenderit in voluptate velit</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="client_2">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-8.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">loksans</h1>
-                                    <p class="dolor_ipsum_text">ipsum dolor sit amet, consectetur adipiscing elit, sed  veniam, quis nostrud exercitation ullamco laboris nisi ut reprehenderit in voluptate velit</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <h1 class="client_text">what is says our clients</h1>
-                    <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                    <div class="clients_section2 layout_padding">
-                        <div class="client_1">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-7.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">loksans</h1>
-                                    <p class="dolor_ipsum_text">ipsum dolor sit amet, consectetur adipiscing elit, sed  veniam, quis nostrud exercitation ullamco laboris nisi ut reprehenderit in voluptate velit</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="client_2">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-8.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">loksans</h1>
-                                    <p class="dolor_ipsum_text">ipsum dolor sit amet, consectetur adipiscing elit, sed  veniam, quis nostrud exercitation ullamco laboris nisi ut reprehenderit in voluptate velit</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <h1 class="client_text">what is says our clients</h1>
-                    <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                    <div class="clients_section2 layout_padding">
-                        <div class="client_1">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-7.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">loksans</h1>
-                                    <p class="dolor_ipsum_text">ipsum dolor sit amet, consectetur adipiscing elit, sed  veniam, quis nostrud exercitation ullamco laboris nisi ut reprehenderit in voluptate velit</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="client_2">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="image_7"><img src="images/img-8.png"></div>
-                                    <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <h1 class="loksans_text">loksans</h1>
-                                    <p class="dolor_ipsum_text">ipsum dolor sit amet, consectetur adipiscing elit, sed  veniam, quis nostrud exercitation ullamco laboris nisi ut reprehenderit in voluptate velit</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    }
+                }
             </div>
         </div>
     </div>
