--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1488,4 +1488,28 @@ textarea#comment::placeholder {
     grid-row-gap: 1em;
 }
 
+.price_section {
+    margin: 5%;
+    margin-left: 20%;
+    margin-right: 20%;
+    background: #d3d3d3;
+    border-radius: 10px;
+}
+
+.price_h {
+    display: flex;
+    justify-content: center;
+    background: darkgray;
+    border-radius: 15px;
+}
+
+.price_num {
+
+}
+
+.micro_p {
+
+}
+
+
 
