--- a/Views/Shared/ScriptsPartial.cshtml
+++ b/Views/Shared/ScriptsPartial.cshtml
@@ -21,6 +21,10 @@
 <!-- javascript -->
 @*<script src="~/js/owl.carousel.js" asp-append-version="true"></script>
 <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>*@
+
+<!-- Swipe -->
+<script src="~/js/swiper-bundle.js" asp-append-version="true"></script>
+
 <!-- non-template-js -->
 <script src="~/js/entryFormScript.js" asp-append-version="true"></script>
 <script src="~/js/PhoneCallerRefScript.js" asp-append-version="true"></script>
@@ -29,5 +33,7 @@
 <script src="~/js/gallery.js" asp-append-version="true"></script>
 <script src="~/js/feedbackFormScript.js" asp-append-version="true"></script>
 <script src="~/js/stringElementCopyScript.js" asp-append-version="true"></script>
+<script src="~/js/swiperInitScript.js" asp-append-version="true"></script>
+<script src="~/js/restoreSwipeBagScript.js" asp-append-version="true"></script>
 
 
