--- a/wwwroot/css/responsive.css
+++ b/wwwroot/css/responsive.css
@@ -944,6 +944,7 @@
         font-size: 70%;
         color: black;
         font-weight: 400;
+        line-height: 1.0;
     }
 
     .carousel_grid_container img {
@@ -961,5 +962,10 @@
         font-weight: 400;
         color: black;
         margin-bottom: 15px;
+    }
+
+    @media (max-width:1400px) 
+    {
+
     }
 }
