--- a/Views/Shared/HeaderPartial.cshtml
+++ b/Views/Shared/HeaderPartial.cshtml
@@ -104,11 +104,11 @@
                             </div>
                             <div class="carousel_grid_item">
                                 <img src="~/images/offer.png" />
-                                <p class="s_text">Крутой оффер который всем интересен</p>
+                                <p class="s_text">Фотоотчет хоть каждый день</p>
                             </div>
                             <div class="carousel_grid_item" id="item_3">
                                 <img src="~/images/offer.png" />
-                                <p class="s_text">Самый крутой оффер</p>
+                                <p class="s_text">Проверяем квалификацию персонала</p>
                             </div>
                         </div>
                         <div class="contact_bt_main">
