--- a/Views/Shared/ScriptsPartial.cshtml
+++ b/Views/Shared/ScriptsPartial.cshtml
@@ -23,7 +23,7 @@
 <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>*@
 
 <!-- Swipe -->
-<script src="~/js/swiper-bundle.js" asp-append-version="true"></script>
+<script src="~/js/swiper-bundle.min.js" asp-append-version="true"></script>
 
 <!-- non-template-js -->
 <script src="~/js/entryFormScript.js" asp-append-version="true"></script>
@@ -34,6 +34,5 @@
 <script src="~/js/feedbackFormScript.js" asp-append-version="true"></script>
 <script src="~/js/stringElementCopyScript.js" asp-append-version="true"></script>
 <script src="~/js/swiperInitScript.js" asp-append-version="true"></script>
-<script src="~/js/restoreSwipeBagScript.js" asp-append-version="true"></script>
 
 
