--- a/Views/Home/ResourseUsed.cshtml
+++ b/Views/Home/ResourseUsed.cshtml
@@ -70,6 +70,7 @@
             <a href="https://www.flaticon.com/free-icons/watch" title="watch icons">Watch icons created by Freepik - Flaticon</a>
         </li>
         <li><a href="https://www.flaticon.com/free-icons/protection" title="protection icons">Protection icons created by Freepik - Flaticon</a></li>
+        <li><a href="https://ru.freepik.com/free-photo/flat-lay-of-various-technician-tools-isolated-on-white-background_18415815.htm#query=%D1%80%D0%B5%D0%BC%D0%BE%D0%BD%D1%82%20%D0%B4%D0%BE%D0%BC%D0%B0&position=11&from_view=search&track=ais">Изображение от rawpixel.com</a> на Freepik</li>
         <li><a href="https://www.flaticon.com/free-icons/ruler" title="ruler icons">Ruler icons created by surang - Flaticon</a></li>
         <li><a href="https://www.flaticon.com/free-icons/promotion" title="promotion icons">Promotion icons created by Freepik - Flaticon</a></li>
         <li><a href="https://www.flaticon.com/free-icons/real-estate" title="real estate icons">Real estate icons created by itim2101 - Flaticon</a></li>
