--- a/Views/Shared/CssPartial.cshtml
+++ b/Views/Shared/CssPartial.cshtml
@@ -5,7 +5,7 @@
 <!-- Responsive-->
 <link rel="stylesheet" href="~/css/responsive.css" asp-append-version="true">
 <!-- fevicon -->
-<link rel="icon" href="~/images/fevicon.ico" type="image/gif" />
+<link rel="icon" href="~/images/favicon.ico" type="image/gif" />
 <!-- Scrollbar Custom CSS -->
 <link rel="stylesheet" href="~/css/jquery.mCustomScrollbar.min.css" asp-append-version="true">
 <!-- Tweaks for older IEs-->
@@ -15,6 +15,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
 
 <!-- Swipe stylesheets -->
-<link rel="stylesheet" type="text/css "href="~/css/swiper-bundle.css" asp-append-version="true"/>
+<link rel="stylesheet" type="text/css "href="~/css/swiper-bundle.min.css" asp-append-version="true"/>
 
 
