--- a/Views/Shared/MetaPartial.cshtml
+++ b/Views/Shared/MetaPartial.cshtml
@@ -35,6 +35,6 @@
         <meta name="keywords" content="None">
     }
 }
-<meta name="author" content="">
+<meta name="author" content="Кудрявцев Дмитрий">
 
 
