--- a/Views/Shared/Section/ContactSectionPartial.cshtml
+++ b/Views/Shared/Section/ContactSectionPartial.cshtml
@@ -32,13 +32,16 @@
                     </form>                   
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="map_main">
-                    <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="500" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+            <details class="road_map">
+                <summary class="road_map_summary">Карта проезда</summary>
+                <div class="col-md-6">
+                    <div class="map_main">
+                        <div class="map-responsive">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2820.270741468247!2d38.981827476645684!3d45.01942916300391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40f04fc61253a9c9%3A0x1b80f7e575ea80ed!2z0YPQuy4g0JvQtdC90LjQvdCwLCAxNDQsINCa0YDQsNGB0L3QvtC00LDRgCwg0JrRgNCw0YHQvdC-0LTQsNGA0YHQutC40Lkg0LrRgNCw0LksIDM1MDAzMw!5e0!3m2!1sru!2sru!4v1692025433773!5m2!1sru!2sru" width="600" height="500" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </details>         
         </div>
     </div>
 </div>
