--- a/Views/Shared/Section/FeedbackSectionPartial.cshtml
+++ b/Views/Shared/Section/FeedbackSectionPartial.cshtml
@@ -19,15 +19,13 @@
     <div class="container">
         <h1 class="our_text">Наши работы</h1>
         <p class="ipsum_text">Фото уже оконченых проектов, от наших довольных клиентов.</p>
-        <div id="main_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
+        <div class="swiper">
+            <div class="swiper-wrapper">
                 @{
                     int i = 0;
                     while (i < Model.dataModelExample.completedProjectsList.Count())
                     {
-                        if (i == 0)
-                        {
-                            <div class="carousel-item active">
+                         <div class="swiper-slide">
                                 <div class="projects_section2">
                                     <div class="container_main2">
                                         <div class="row">
@@ -51,45 +49,13 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        }
-                        else
-                        {
-                            <div class="carousel-item">
-                                <div class="projects_section2">
-                                    <div class="container_main2">
-                                        <div class="row">
-                                            @{
-                                                int j = 0;
-                                                while (j < 3 && i < Model.dataModelExample.completedProjectsList.Count())
-                                                {
-                                                    <div class="col-sm-4">
-                                                        <div class="container_main1">
-                                                            <img src="@Model.dataModelExample.completedProjectsList.ToList()[i].TitleImagePath" alt="Avatar" class="image" style="width:100%">
-                                                            <h1 class="modern_text">@Model.dataModelExample.completedProjectsList.ToList()[i].Title</h1>
-                                                            <div class="middle">
-                                                                <a class="text" href="@Url.Action("FeedbackPhoto", "Home", new{Model.dataModelExample.completedProjectsList.ToList()[i].ID})">VIEW MORE</a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    j++;
-                                                    i++;
-                                                }
-                                            }
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        }
+                            </div>                      
                     }
                 }
             </div>
-            <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-                <i class="fa fa-angle-left"></i>
-            </a>
-            <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-                <i class="fa fa-angle-right"></i>
-            </a>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-scrollbar"></div>
         </div>
     </div>
 </div>
