--- a/Views/Shared/Section/ServicesSectionPartial.cshtml
+++ b/Views/Shared/Section/ServicesSectionPartial.cshtml
@@ -10,7 +10,7 @@
         <div class="furnitures_section2 layout_padding">
             <div class="row">
                 @{
-                    foreach( WorkServices service in Model.dataModelExample.workServicesList)
+                    foreach( WorkServices service in Model.dataModelExample!.workServicesList)
                 {
                     <div class="col-md-6">
                         <div class="container_main">
