--- a/wwwroot/css/responsive.css
+++ b/wwwroot/css/responsive.css
@@ -958,7 +958,7 @@
     
     .pop_up_body p {
         font-family: Oswald;
-        font-size: 16px;
+        font-size: 1.7em;
         font-weight: 400;
         color: black;
         margin-bottom: 15px;
